<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Marculator</string>
    <string name="action_settings">W?????????</string>

    <!-- activity_main (Home) Screen -->
    <string name="marculator">Marculator</string>
    <string name="templates">Templates</string>
    <string name="charts">Summary</string>
    <string name="inputMarks">Input Marks</string>
    <string name="marculate">MARCULATE</string>
    <!-- end activity_main (Home) Screen -->

    <string name="title_activity_templates_screen">templatesScreen</string>
    <!-- activity_templates -->
    <string name="button_add_course">Add</string>
    <string name="button_delete_course">Delete</string>
    <string name="button_save_course">Save Your Changes!!!</string>
    <string name="button_import_course">Import</string>
    <string name="button_export_course">Export</string>
    <!-- end activity_templates -->

    <string name="title_activity_course_details_screen">courseDetailsScreen</string>
    <!-- activity_course_details -->
    <string name="course_name_label">Course: </string>
    <string name="course_name">Enter Course Name</string>
    <string name="category_label">Category: </string>
    <string name="item_name_label">Item Name: </string>
    <string name="item_name">Name the item </string>
    <string name="category_weight_label">% weight of final mark: </string>
    <string name="category_weight">Enter % weight </string>
    <string name="btn_new_item">New Course Item</string>
    <string name="btn_add_item">Add Item</string>
    <string name="btn_save">Save Course Details</string>
    <string name="btn_cancel">Cancel</string>
    <!-- end activity_course_details -->

    <string name="CoolFaceButton">coolFace</string>

    <!--
     templates Screen this is where the user can choose
     to add a course with related fields for calculating marks
    -->

    <string name="button_edit_course">Edit</string>

    <!-- <string name="title_course_add">addCourse</string> -->
    <!-- end Add Course Screen -->


    <!--
    Chart Screen this is where the user can a chart
    of his or her marks
    -->
    <string name="title_activity_charts_screen">Chart</string>

    <!-- end Chart screen -->


    <!--
    Priority Screen where the user can view
    priorities to study for.  this activity is currently not connected
    to the home page
    -->
    <string name="title_activity_marculate_screen">Marculate!!!</string>

    <!--
    View Details Screen where the user can view details of their marks.
      this activity is currently not connected
    to the home page
    -->


    <!-- end View Details Screen -->


    <!-- button on input-marks-screen -->
    <string name="title_activity_input_marks_screen">Input Marks</string>
    <string name="inputMarksScreenButton">Input Mark</string>
    <string name="label_item">Select Item:</string>
    <string name="label_course">Select Course:</string>
    <string name="label_mark">Type in your mark:</string>
    <string name="label_mark_out_of">Type in what your mark is out of:</string>

    <!-- edit_course_detail -->
    <string name="title_activity_edit_course_details_screen">Edit a Course</string>
    <string name="course_marks_label">Course Marks: </string>
    <string name="courseName">Enter Course Name:</string>
    <string name="category">Category:</string>
    <string name="categoryWeight">Weight(%):</string>
    <string name="itemName">Item:</string>
    <string name="edit_course_name">Course Name</string>
    <string name="edit_category">Select Category</string>
    <string name="edit_categoryWeight">Enter Weight</string>
    <string name="edit_itemName">Enter Item Name</string>
    <string name="button_cancel_add_activity">Cancel</string>
    <string name="button_save_activity">Save</string>
    <string name="button_add_newItem">New Item</string>

    <string-array name="category_list">
        <item>Quiz</item>
        <item>Assignment</item>
        <item>Lab</item>
        <item>Exam</item>
        <item>Other</item>
    </string-array>
    <!-- end activity_add_activity -->

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_marculator">MarculatorActivity</string>
    <string name="title_activity_charts">ChartsActivity</string>
    <string name="title_activity_markulate_results">MarkulateResults</string>
    <string name="title_activity_markulate">MarkulateActivity</string>
    <string name="title_activity_markulate_result">MarkulateResult</string>

</resources>
