
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

>
<RelativeLayout

    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:isScrollContainer="true"
    android:layout_above="@+id/bottom_control_bar">


    <TableLayout

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <TableRow
            android:layout_marginTop="15dp"
            android:layout_marginBottom="1dp"
            >

            <TextView
                android:id="@+id/course_name_label"
                android:text="@string/course_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
            <EditText
                android:id="@+id/course_name"
                android:hint="@string/course_name"
                android:layout_weight="1"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"

                android:textSize="16dp" />
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/btn_new_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight = "1"
                android:onClick="newItem"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            >
            <TextView
                android:id="@+id/category_label"
                android:text="@string/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                />
            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:layout_marginRight="15dp"
                />

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/item_name_label"
                android:text="@string/item_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                />

            <EditText
                android:id="@+id/item_name"
                android:hint="@string/item_name"
                android:layout_weight="1"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:textSize="12dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="1dp">
            <TextView
                android:id="@+id/category_weight_label"
                android:text="@string/category_weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                />

            <EditText
                android:id="@+id/category_weight"
                android:hint="@string/category_weight"
                android:layout_weight="1"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:textSize="12dp" />

        </TableRow>


        <TableRow>
            <Button
                android:id="@+id/btn_add_item"
                android:text="@string/btn_add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight = "1"
                android:onClick="addItem"/>

        </TableRow>
        <TableRow>

            <ListView
                android:id = "@+id/android:list"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </TableRow>

        </TableLayout>
    </RelativeLayout>


        <LinearLayout android:id="@+id/bottom_control_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            >
            <Button
                android:text="@string/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "2"

                android:onClick="detailsAdded" />
            <Button
                android:text="@string/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"

                android:layout_gravity="bottom"
                android:layout_weight = "0.5"

                />

        </LinearLayout>






</RelativeLayout>

