<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.marculator.comp3717.InputMarksActivity"
    >

    <TextView android:text="@string/label_course"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnCourses"
        android:layout_column="1" />

    <TextView
        android:id="@+id/edit_course_details_course_textViewItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_item"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnItems"
        android:layout_column="1" />

    <TextView
        android:id="@+id/txtLabelMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_mark"
        />

    <EditText
        android:id="@+id/edtInputMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputMarksScreenButton"
        android:id="@+id/buttonInputMark"
        android:onClick="save_data" />

</LinearLayout>
