<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/fullLayout">

    tools:context="com.example.marculator.comp3717.editCourseDetails">

    <!--EditText box for entering the course-->
    <LinearLayout
        android:id="@+id/templates_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/courseLayout">


            <TextView
                android:id="@+id/textView_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Math 3510"
                android:layout_weight="5"/>
            <Button
                android:id="@+id/templates_editBtn_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_edit_course"
                android:onClick="editCourseDetails"
                android:singleLine="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

        >


            <TextView
                android:id="@+id/textView_course2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Math 3510"
                android:layout_weight="5"/>
            <Button
                android:id="@+id/templates_editBtn_course2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_edit_course"
                android:onClick="editCourseDetails"
                android:singleLine="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/textView_course3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Math 3510"
                android:layout_weight="5"/>
            <Button
                android:id="@+id/templates_editBtn_course3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_edit_course"
                android:onClick="editCourseDetails"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.13"
        android:id="@+id/controlLayout">

        <!--add button to add a course-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_course"
            android:onClick="addCourseDetails"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_course"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_import_course"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:onClick="importCourse" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_export_course"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:onClick="exportCourse" />
    </LinearLayout>
</LinearLayout>